--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "react-i18next": "^11.15.6",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "jwt-decode": "^3.1.2",
+    "axios": "^0.26.0",
+    "axios-mock-adapter": "^1.20.0",
+    "bootstrap": "5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
