--- a/package.json
+++ b/package.json
@@ -3,6 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.6.5",
+    "axios-mock-adapter": "^1.20.0",
+    "bootstrap": "5.1.3",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "jwt-decode": "^3.1.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.2.0",
+    "react-bootstrap-typeahead": "^6.0.0-alpha.9",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-i18next": "^11.15.6",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
+    "typescript": "^4.4.2",
+    "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,33 +33,15 @@
     "@types/node": "^16.18.72",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "i18next": "^21.6.14",
-    "i18next-browser-languagedetector": "^6.1.3",
-    "react-i18next": "^11.15.6",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-saga": "^1.1.3",
-    "jwt-decode": "^3.1.2",
-    "axios": "^0.26.0",
-    "axios-mock-adapter": "^1.20.0",
-    "bootstrap": "5.1.3"
+    "@types/react-router-dom": "^5.3.3",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.70.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
