--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "aws-amplify": "^6.0.12",
     "axios": "^1.6.5",
     "axios-mock-adapter": "^1.20.0",
     "bootstrap": "5.1.3",
@@ -14,14 +16,14 @@
     "react-bootstrap": "^2.2.0",
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.27.1",
     "react-i18next": "^11.15.6",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "typescript": "^4.4.2",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
+    "typescript": "^4.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
