--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -28,5 +28,11 @@
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
     }
+  },
+  "storage": {
+    "remineDB": {
+      "providerPlugin": "awscloudformation",
+      "service": "DynamoDB"
+    }
   }
 }
