--- a/amplify/backend/function/reviewAppApi/reviewAppApi-cloudformation-template.json
+++ b/amplify/backend/function/reviewAppApi/reviewAppApi-cloudformation-template.json
@@ -16,10 +16,6 @@
     "s3Key": {
       "Type": "String"
     },
-    "authgessiappreviewminere9940ef4UserPoolId": {
-      "Type": "String",
-      "Default": "authgessiappreviewminere9940ef4UserPoolId"
-    },
     "storageremineDBName": {
       "Type": "String",
       "Default": "storageremineDBName"
@@ -63,12 +59,12 @@
         "FunctionName": {
           "Fn::If": [
             "ShouldNotCreateEnvResources",
-            "addUserToDB",
+            "reviewAppApi",
             {
               "Fn::Join": [
                 "",
                 [
-                  "addUserToDB",
+                  "reviewAppApi",
                   "-",
                   {
                     "Ref": "env"
@@ -85,9 +81,6 @@
             },
             "REGION": {
               "Ref": "AWS::Region"
-            },
-            "AUTH_GESSIAPPREVIEWMINERE9940EF4_USERPOOLID": {
-              "Ref": "authgessiappreviewminere9940ef4UserPoolId"
             },
             "STORAGE_REMINEDB_NAME": {
               "Ref": "storageremineDBName"
@@ -106,7 +99,7 @@
             "Arn"
           ]
         },
-        "Runtime": "python3.12",
+        "Runtime": "python3.8",
         "Layers": [],
         "Timeout": 25
       }
@@ -117,12 +110,12 @@
         "RoleName": {
           "Fn::If": [
             "ShouldNotCreateEnvResources",
-            "gessiappreviewminerLambdaRolefa035fb1",
+            "gessiappreviewminerLambdaRoled6c76a45",
             {
               "Fn::Join": [
                 "",
                 [
-                  "gessiappreviewminerLambdaRolefa035fb1",
+                  "gessiappreviewminerLambdaRoled6c76a45",
                   "-",
                   {
                     "Ref": "env"
@@ -211,50 +204,22 @@
             {
               "Effect": "Allow",
               "Action": [
-                "cognito-identity:Describe*",
-                "cognito-identity:Get*",
-                "cognito-identity:List*",
-                "cognito-idp:Describe*",
-                "cognito-idp:AdminGetDevice",
-                "cognito-idp:AdminGetUser",
-                "cognito-idp:AdminList*",
-                "cognito-idp:List*",
-                "cognito-sync:Describe*",
-                "cognito-sync:Get*",
-                "cognito-sync:List*",
-                "iam:ListOpenIdConnectProviders",
-                "iam:ListRoles",
-                "sns:ListPlatformApplications"
-              ],
-              "Resource": [
-                {
-                  "Fn::Join": [
-                    "",
-                    [
-                      "arn:aws:cognito-idp:",
-                      {
-                        "Ref": "AWS::Region"
-                      },
-                      ":",
-                      {
-                        "Ref": "AWS::AccountId"
-                      },
-                      ":userpool/",
-                      {
-                        "Ref": "authgessiappreviewminere9940ef4UserPoolId"
-                      }
-                    ]
-                  ]
-                }
-              ]
-            },
-            {
-              "Effect": "Allow",
-              "Action": [
                 "dynamodb:Put*",
                 "dynamodb:Create*",
                 "dynamodb:BatchWriteItem",
-                "dynamodb:PartiQLInsert"
+                "dynamodb:PartiQLInsert",
+                "dynamodb:Get*",
+                "dynamodb:BatchGetItem",
+                "dynamodb:List*",
+                "dynamodb:Describe*",
+                "dynamodb:Scan",
+                "dynamodb:Query",
+                "dynamodb:PartiQLSelect",
+                "dynamodb:Update*",
+                "dynamodb:RestoreTable*",
+                "dynamodb:PartiQLUpdate",
+                "dynamodb:Delete*",
+                "dynamodb:PartiQLDelete"
               ],
               "Resource": [
                 {
