--- a/package.json
+++ b/package.json
@@ -18,14 +18,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.27.1",
     "react-i18next": "^11.15.6",
-    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
-    "redux-saga": "^1.1.3",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
