feat(Get apps): Mapping from DynamoDB to FE DTO ok!

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -93,7 +93,7 @@
             "StreamArn"
           ],
           "category": "storage",
-          "resourceName": "reviewMinerDB"
+          "resourceName": "appsDB"
         }
       ],
       "providerPlugin": "awscloudformation",
