--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-bootstrap": "^2.2.0",
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.27.1",
     "react-i18next": "^11.15.6",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^10.0.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
