feat(Create): It works!

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -93,6 +93,15 @@
             "StreamArn"
           ],
           "category": "storage",
+          "resourceName": "reviewMinerDB"
+        },
+        {
+          "attributes": [
+            "Name",
+            "Arn",
+            "StreamArn"
+          ],
+          "category": "storage",
           "resourceName": "appsDB"
         }
       ],
