--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^1.6.5",
     "axios-mock-adapter": "^1.20.0",
     "bootstrap": "5.1.3",
+    "chart.js": "^4.4.1",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.2.0",
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.27.1",
