--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-i18next": "^11.15.6",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.4",
     "typescript": "^4.4.2",
