--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-d3-tree": "^3.6.2",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-form-wizard-component": "^0.1.7",
     "react-hook-form": "^7.27.1",
